collapse: try a correction

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -144,11 +144,13 @@ img {
 }
 
 .content {
+  background-color: gray;
   overflow: hidden;
   height: 0;
   transition: height 1s ease-out, opacity 1s ease-out;
   opacity: 0;
   max-height: fit-content;
+  color: black;
 }
 
 .content.open {
@@ -156,7 +158,10 @@ img {
 }
 
 summary {
+  background-color: #FF6060;
+  border-radius: 5px;
   cursor: pointer;
+  padding: 10px;
 }
 
 /*# sourceMappingURL=index.css.map */
